--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: cat_trivia
+name: get_users
 description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.17.3 <3.0.0"
+  sdk: ">=2.15.1 <3.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -33,18 +33,15 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
-  dio: ^4.0.6
+  dio: ^5.0.0
+  extended_image: ^7.0.0
   hive: ^2.2.3
-  json_annotation: ^4.5.0
-  json_serializable: ^6.2.0
-  freezed: ^2.0.3+1
-  freezed_annotation: ^2.0.3
+  json_annotation: ^4.8.0
+  freezed_annotation: ^2.2.0
   hive_flutter: ^1.1.0
-  hive_generator: ^1.1.3
   get_it: ^7.2.0
-  flutter_bloc: ^8.0.1
-  equatable: ^2.0.3
+  flutter_bloc: ^8.1.2
+  equatable: ^2.0.5
 
 dev_dependencies:
   flutter_test:
@@ -56,7 +53,9 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
-  build_runner: ^2.1.11
+  build_runner: ^2.3.3
+  json_serializable: ^6.6.1
+  freezed: ^2.3.2
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
